# ghostty-config

./: Cargo.toml  README.md
.claude/skills/release/: SKILL.md
docs/: index.html
src/: app_state.rs  error.rs  main.rs
src/cli/: actions.rs  discovery.rs  fonts.rs  keybinds.rs  mod.rs  themes.rs  validate.rs
src/config/: categorize.rs  file_io.rs  mod.rs  model.rs  parser.rs  type_inference.rs
src/routes/: config_api.rs  fonts_api.rs  import_export_api.rs  keybinds_api.rs  mod.rs  pages.rs  preview_api.rs  themes_api.rs  validation_api.rs
static/js/: app.js  keycapture.js
templates/: index.html
templates/pages/: category.html  import_export.html  keybinds.html  themes.html
