[package]
name = "ghostty-config"
version = "0.1.0"
edition = "2021"
description = "Web-based configuration GUI for Ghostty terminal"
license = "MIT"
authors = ["Max Lv <max.c.lv@gmail.com>"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip"] }
askama = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
directories = "6"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
